v48 2024-07-17

	* Fixed memory leak when adding an action (.RETURN, .SIDE_EFFECT, etc)
	  throws. Thank you Dominic Koepke for the fix.

	* Dropped older compilers from CI builds (gcc <= 6 and clang <= 7) since
	  GitHub actions now require node-20, and no build environment is
	  currently available that both supports node-20 and older compilers.

	* Support for STDMETHOD functions for COM. Thank you Luis Andres Cesena
	  for the implementation, and Kevin Puetz for the discussions. This
	  adds new macros:

	      MAKE_STDMETHOD_MOCKn(...)
	      IMPLEMENT_STDMETHOD_MOCKn(...)

	* Fixed issue with std::expected causing compilation error. Thank you
	  @subbota-a for reporting

	* Silenced gcc -Weffc++ warnings. Thanks Sven Fischer for the report

v47 2024-01-01

	* Coroutines are conditionally supported by the __cpp_impl_coroutine
	  feature test macro. There is no longer any need to define the
	  TROMPELOEIL_EXPERIMENTAL_COROUTINES macro in order to use coroutines
	  with Trompeloeil.

	* Split the monolithic "trompeloeil.hpp" into several smaller
	  headers. You can continue to #include <trompeloeil.hpp> as usual,
	  but you can also do more fine grained #include:s, which may
	  improve build times. E.g.:

	      #include <trompeloeil/mock.hpp> // basic mock functionality
	      #include <trompeloeil/lifetime.hpp> // REQUIRE_DESTRUCTION etc.
	      #include <trompeloeil/matcher/re.hpp> // regular expressions

	  The reference manual says which header to include to get the
	  functionality for each item. If no header is mentioned, it is in
	  <trompeleil/mock.hpp>

v46 2023-11-06

	* Experimental support for coroutines. Use CO_RETURN (or LR_CO_RETURN)
	  for a member function that has a coroutine return type. Use CO_THROW
	  (or LR_CO_THROW) to throw from a coroutine. Use as many CO_YIELD
	  (or LR_CO_YIELD) from a coroutine function as you like, as long as the
	  promise type supports it.

	  The experimental support must be explicitly enabled with
